--- a/src/app/containers/Product/components/ProductFilter/ProductFilter.less
+++ b/src/app/containers/Product/components/ProductFilter/ProductFilter.less
@@ -11,4 +11,26 @@
       padding-bottom: 0;
     }
   }
+
+  .ant-card-head-title {
+    font-size: 20px;
+    font-weight: 600;
+  }
+
+  .ant-card {
+    width: unset;
+    margin-bottom: 20px;
+
+    .ant-card-head {
+      padding-left: 0;
+      padding-right: 0;
+    }
+
+    .ant-card-body {
+      padding-left: 0;
+      padding-right: 0;
+    }
+  }
+
+
 }
