--- a/src/app/containers/Product/components/SupportMenu/SupportMenu.less
+++ b/src/app/containers/Product/components/SupportMenu/SupportMenu.less
@@ -1,3 +1,39 @@
 .supportMenu {
+  min-width: 220px;
+  .ant-card {
+    .ant-card-head {
+      padding-left: 0;
+      padding-right: 0;
+
+      .ant-card-head-title {
+        font-size: 20px;
+        font-weight: 600;
+        padding-top: 0;
+      }
+    }
+
+    .ant-card-body {
+      padding-left: 0;
+      padding-right: 0;
+    }
+  }
   
+  .supportItem {
+    margin-bottom: 10px;
+    .supportPhone {
+      font-size: 24px;
+      color: #E5704B;
+      text-align: center;
+      letter-spacing: 2px;
+    }
+
+    .supportName {
+      font-weight: 600;
+      color: #E5704B;
+    }
+
+    .supportTitle {
+
+    }
+  }
 }
