--- a/src/app/containers/Cart/components/CartItem/CartItem.less
+++ b/src/app/containers/Cart/components/CartItem/CartItem.less
@@ -1,9 +1,20 @@
 .cartItem {
+  width: 90%;
+  margin: 0 auto;
   .ant-card-body {
     display: flex;
     flex-direction: row;
     .productInfo {
       flex: 1;
+      .ant-card-meta-avatar {
+        width: 80px;
+        height: 80px;
+        .ant-avatar-image {
+          display: block;
+          width: 100%;
+          height: 100%;
+        }
+      }
     }
     .inputBlock {
       display: flex;
@@ -11,6 +22,8 @@
       justify-content: flex-end;
       flex: auto;
       // width: 100%;
+      font-size: 18px;
+      font-weight: 600;
       .quantity {
         display: flex;
         // flex: auto;
