--- a/src/app/containers/DashBoard/components/Information/components/Distributor/Distributor.less
+++ b/src/app/containers/DashBoard/components/Information/components/Distributor/Distributor.less
@@ -13,8 +13,11 @@
     flex-direction: row;
     justify-content: space-around;
     .item {
+      transition: all .2s ease-in-out;
+
       &:hover {
         opacity: 70%;
+        transform: scale(1.1);
       }
 
       .icon {
