--- a/src/app/containers/DashBoard/components/Projects/components/ProjectItem/ProjectItem.less
+++ b/src/app/containers/DashBoard/components/Projects/components/ProjectItem/ProjectItem.less
@@ -6,9 +6,15 @@
   padding: 10px;
   min-width: 300px;
   flex: 1;
+  border: 1px solid transparent;
 
   &:hover {
     border: 1px solid #e5704b;
+    .image {
+      img {
+        transform: scale(1.1);
+      }
+    }
   }
 
   .image {
@@ -18,6 +24,7 @@
     width: 100%;
     img {
       width: 300px;
+      transition: all .2s ease-in-out;
     }
   }
 
