--- a/src/app/containers/DashBoard/components/Construction/Construction.less
+++ b/src/app/containers/DashBoard/components/Construction/Construction.less
@@ -1,10 +1,10 @@
 .construction{
-  height: 450px;
+  height: 280px;
   background-color: #FF7043;
   color: #fff;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-start;
   text-align: center;
   
   .icon {
