--- a/src/app/containers/DashBoard/components/PopupMenus/PopupMenus.less
+++ b/src/app/containers/DashBoard/components/PopupMenus/PopupMenus.less
@@ -1,40 +1,24 @@
-.product {
-  width: 100%;
-  // display: flex;
-  // flex: 1;
-  // flex-direction: row;
-  // width: 100%;
-  // justify-content: center;
-  padding: 3% 0;
-  .header {
-    font-size: 24px;
-    text-align: center;
-    margin-bottom: 20px;
-    // margin-bottom: 5%;
-  }
+.popup-menu {
+  width: 550px;
+  .ant-modal-body {
 
-  .summary {
-    color: #BBBBBB;
-    width: 50%;
-    font-size: 14px;
-    text-align: center;
-    margin: 0 auto;
-    margin-bottom: 50px;
-  }
-
-  .productBlock {
     display: flex;
     flex-direction: row;
-    width: 100%;
-    overflow-y: auto;
   }
 
-  // .ant-carousel {
-  //   width: 100%;
-  //   // flex: 1;
-  //   // flex: 1 1 0;
-  //   .slick-slide {
-  //     width: 300px;
-  //   }
-  // }
+  .leftBlock {
+    img {
+      width: 300px;
+      height: 300px;
+    }
+  }
+
+  .rightBlock {
+    display: flex;
+    flex-direction: column;
+    
+    img {
+      width: 50px;
+    }
+  }
 }
