--- a/src/app/containers/DashBoard/components/ProductList/components/ProductItem/ProductItem.less
+++ b/src/app/containers/DashBoard/components/ProductList/components/ProductItem/ProductItem.less
@@ -9,7 +9,8 @@
   border: 1px solid transparent;
 
   &:hover {
-    border: 1px solid #e5704b;
+    opacity: 80%;
+
     .image {
       img {
         transform: scale(1.1);
