--- a/src/app/containers/DashBoard/components/Projects/components/ProjectItem/ProjectItem.less
+++ b/src/app/containers/DashBoard/components/Projects/components/ProjectItem/ProjectItem.less
@@ -9,7 +9,9 @@
   border: 1px solid transparent;
 
   &:hover {
-    border: 1px solid #e5704b;
+    // border: 1px solid #e5704b;
+    opacity: 80%;
+    cursor: pointer;
     .image {
       img {
         transform: scale(1.1);
@@ -23,8 +25,8 @@
     margin-bottom: 20px;
     width: 100%;
     img {
-      width: 300px;
-      transition: all .2s ease-in-out;
+      width: 90%;
+      transition: all 0.2s ease-in-out;
     }
   }
 
