--- a/src/app/containers/DashBoard/components/Banner/Banner.less
+++ b/src/app/containers/DashBoard/components/Banner/Banner.less
@@ -1,5 +1,11 @@
 .banner {
+  height: 350px;
+  position: relative;
   .ant-image {
     width: 100%;
+    position: relative;
+    overflow: hidden;
+    display: block;
+    height: 100%;
   }
 }
