--- a/src/app/containers/DashBoard/components/Faq/Faq.less
+++ b/src/app/containers/DashBoard/components/Faq/Faq.less
@@ -1,17 +1,15 @@
 .faq {
-  // height: 846px;
   background-color: #EFEFEF;
-  padding: 5% 0;
-  padding-bottom: 3%;
+  padding: 1.5% 0;
   display: flex;
   justify-content: center;
   flex-direction: column;
   .title {
     font-size: 24px;
     text-align: center;
-    margin-bottom: 5%;
+    margin-bottom: 1.5%;
+    text-transform: capitalize;
   }
-
   .questionBlock {
     display: flex;
     flex-direction: column;
@@ -20,17 +18,16 @@
       flex-direction: row;
       justify-content: space-around;
       .item {
-        height: 150px;
+        height: 100px;
         width: 40%;
+        margin-bottom: 20px;
         .question {
           color: #000;
           font-size: 16px;
         }
-    
         .answer {
           color: #777777;
           font-size: 14px;
-          // width: 50%;
         }
       } 
     }
