--- a/src/app/containers/DashBoard/components/Information/components/Distributor/Distributor.less
+++ b/src/app/containers/DashBoard/components/Information/components/Distributor/Distributor.less
@@ -1,20 +1,27 @@
 .distributor {
-  height: 450px;
+  height: 350px;
   background-color: #ededed;
   display: flex;
   flex-direction: column;
   .title {
     font-size: 24px;
-    padding: 4% 0;
+    padding: 20px 0;
     text-align: center;
+    text-transform: capitalize;
   }
   .content {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
+    a {
+      display: flex;
+      width: 50%;
+      justify-content: center;
+    }
     .item {
       transition: all .2s ease-in-out;
-
+      flex: 1;
+      width: 50%;
       &:hover {
         opacity: 70%;
         transform: scale(1.1);
@@ -23,6 +30,8 @@
       .icon {
         font-size: 120px;
         color: #ff7043;
+        display: flex;
+        justify-content: center;
       }
       .text {
         margin-top: 10px;
