--- a/src/app/containers/DashBoard/components/Information/components/Focusing/Focusing.less
+++ b/src/app/containers/DashBoard/components/Information/components/Focusing/Focusing.less
@@ -5,7 +5,8 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    
+    width: 70%;
+    margin: 0 auto;
     .itemImage{
       margin-right: 2%;
 
@@ -13,8 +14,17 @@
         margin-right: unset;
       }
 
-      .ant-image-img{
-        object-fit: cover;
+      .ant-image {
+        height: 300px;
+        overflow: hidden;
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        position: relative;
+        .ant-image-img{
+          object-fit: cover;
+          width: 400px;
+        }
       }
     }
     .itemBlog {
@@ -27,7 +37,7 @@
         flex-direction: row;
     
         .itemIcon {
-          font-size: 90px;
+          font-size: 70px;
           margin-right: 10px;
           color: #FF7043;
         }
