--- a/src/app/containers/DashBoard/components/Projects/Projects.less
+++ b/src/app/containers/DashBoard/components/Projects/Projects.less
@@ -1,20 +1,14 @@
-.product {
+.project {
   width: 100%;
-  // display: flex;
-  // flex: 1;
-  // flex-direction: row;
-  // width: 100%;
-  // justify-content: center;
   padding: 3% 0;
   .header {
     font-size: 24px;
     text-align: center;
     margin-bottom: 20px;
-    // margin-bottom: 5%;
   }
 
   .summary {
-    color: #BBBBBB;
+    color: #bbbbbb;
     width: 50%;
     font-size: 14px;
     text-align: center;
@@ -22,19 +16,32 @@
     margin-bottom: 50px;
   }
 
-  .productBlock {
-    display: flex;
-    flex-direction: row;
+  .projectBlock {
     width: 100%;
-    overflow-y: auto;
-  }
+    overflow: hidden;
 
-  // .ant-carousel {
-  //   width: 100%;
-  //   // flex: 1;
-  //   // flex: 1 1 0;
-  //   .slick-slide {
-  //     width: 300px;
-  //   }
-  // }
+    .animationBlock {
+      display: flex;
+      flex-direction: row;
+
+      // animation-name: rightToLeft;
+      // animation-duration: 20s;
+      // animation-timing-function: linear;
+      // animation-iteration-count: infinite;
+      // animation-delay: 5000ms;
+
+      // @keyframes rightToLeft {
+      //   0% {
+      //     transform: translateX(0);
+      //   }
+      //   100% {
+      //     transform: translateX(-120%);
+      //   }
+      // }
+
+      // &:hover {
+      //   animation-play-state: paused;
+      // }
+    }
+  }
 }
