--- a/src/app/containers/Template/components/Template/components/Header/components/RightMenu/RightMenu.less
+++ b/src/app/containers/Template/components/Template/components/Header/components/RightMenu/RightMenu.less
@@ -2,8 +2,12 @@
   float: right;
   display: flex;
   flex-direction: row;
-  justify-content: center;
-  justify-items: center;
+  justify-content: flex-end;
+  justify-items: flex-end;
+  flex: 1;
+  .userDropDown {
+    margin-right: 10px;
+  }
   .ant-menu-horizontal {
     border-bottom: none;
   }
