apply mobile view landing page

--- a/src/app/containers/DashBoard/components/Banner/Banner.less
+++ b/src/app/containers/DashBoard/components/Banner/Banner.less
@@ -1,6 +1,11 @@
 .banner {
   height: 350px;
   position: relative;
+
+  &-mobile {
+    height: auto;
+  }
+
   .ant-image {
     width: 100%;
     position: relative;
