--- a/src/app/containers/DashBoard/components/Construction/Construction.less
+++ b/src/app/containers/DashBoard/components/Construction/Construction.less
@@ -14,6 +14,10 @@
   .title {
     font-size: 24px;
     margin-bottom: 10px;
+
+    b {
+      text-transform: capitalize;
+    }
   }
 
   .subTitle {
@@ -27,5 +31,23 @@
     background-color: #FF7043;
     border: 1px solid #fff;
     margin: 0 auto;
+  }
+
+  &-mobile {
+    height: fit-content;
+    padding: 1rem;
+
+    .icon {
+      font-size: 45px;
+    }
+
+    .title {
+      font-size: 16px;
+      margin-bottom: 1rem;
+    }
+
+    .subTitle {
+      font-size: 12px;
+    }
   }
 }
