--- a/src/app/containers/DashBoard/components/DashBoard/ElectricalCable/ElectricalCable.less
+++ b/src/app/containers/DashBoard/components/DashBoard/ElectricalCable/ElectricalCable.less
@@ -7,11 +7,13 @@
     }
   }
   .electrical-cables {
+
     .ant-spin-container {
-      // display: flex;
-      // flex-direction: column;
       width: 100%;
-      
+      justify-content: center;
+      display: flex;
+      flex-direction: row;
+      flex-wrap: wrap;
     }
   }
 }
