--- a/src/app/containers/DashBoard/components/DashBoard/LedLight/LedLight.less
+++ b/src/app/containers/DashBoard/components/DashBoard/LedLight/LedLight.less
@@ -2,8 +2,15 @@
   .banner {
     display: flex;
     justify-content: center;
+    
     .ant-image {
       width: 50%;
     }
+  }
+  .items {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
   }
 }
