--- a/src/app/containers/DashBoard/components/Information/components/History/History.less
+++ b/src/app/containers/DashBoard/components/Information/components/History/History.less
@@ -1,6 +1,6 @@
 .historyBlog {
   margin: 1.5% auto;
-  width: 70%;
+  width: 80%;
   text-align: center;
 
   .title {
@@ -10,5 +10,17 @@
   .content {
     font-size: 14px;
     color: #777777;
+    letter-spacing: 0.6px;
+  }
+
+  &-mobile {
+    width: 100%;
+
+    .title {
+      font-size: 18px;
+    }
+    .content {
+      font-size: 12px;
+    }
   }
 }
