--- a/src/app/containers/DashBoard/components/Information/components/Distributor/Distributor.less
+++ b/src/app/containers/DashBoard/components/Information/components/Distributor/Distributor.less
@@ -7,7 +7,7 @@
     font-size: 24px;
     padding: 20px 0;
     text-align: center;
-    text-transform: capitalize;
+    text-transform: uppercase;
   }
   .content {
     display: flex;
@@ -19,7 +19,7 @@
       justify-content: center;
     }
     .item {
-      transition: all .2s ease-in-out;
+      transition: all 0.2s ease-in-out;
       flex: 1;
       width: 50%;
       &:hover {
@@ -32,6 +32,9 @@
         color: #ff7043;
         display: flex;
         justify-content: center;
+        img {
+          width: 200px;
+        }
       }
       .text {
         margin-top: 10px;
@@ -39,6 +42,32 @@
         color: #777;
         text-align: center;
         font-weight: 600;
+        text-transform: capitalize;
+      }
+    }
+  }
+
+  &-mobile {
+    height: auto;
+    padding-bottom: 1rem;
+
+    .title {
+      font-size: 18px;
+    }
+
+    .content {
+      .item {
+        width: auto;
+
+        .icon {
+          img {
+            width: 100px;
+          }
+        }
+
+        .text {
+          font-size: 12px;
+        }
       }
     }
   }
