--- a/src/app/containers/DashBoard/components/Projects/components/ProjectItem/ProjectItem.less
+++ b/src/app/containers/DashBoard/components/Projects/components/ProjectItem/ProjectItem.less
@@ -2,14 +2,14 @@
   display: flex;
   flex-direction: column;
   border: unset;
-  width: 30%;
+  // width: 30%;
+  width: 300px;
   padding: 10px;
-  min-width: 300px;
+  // min-width: 300px;
   flex: 1;
   border: 1px solid transparent;
 
   &:hover {
-    // border: 1px solid #e5704b;
     opacity: 80%;
     cursor: pointer;
     .image {
@@ -35,6 +35,8 @@
     display: flex;
     flex-direction: column;
     padding: 5px;
+    width: 300px;
+
     .information {
       margin-bottom: 10px;
       text-align: center;
@@ -50,7 +52,7 @@
         white-space: nowrap;
         overflow: hidden;
         text-overflow: ellipsis;
-        width: 300px;
+        width: 100%;
         margin: 0 auto;
       }
       .rate {
@@ -80,6 +82,23 @@
         .favouriteButton {
         }
       }
+    }
+  }
+
+  &-mobile {
+    padding: unset;
+    height: fit-content;
+    
+    &-landscape {
+      width: 33%;
+    }
+    &-portrait {
+      width: 50%;
+    }
+    .content {
+      width: 100%;
+      padding: 1rem;
+      margin: unset;
     }
   }
 }
