--- a/src/app/containers/Template/components/Template/Template.less
+++ b/src/app/containers/Template/components/Template/Template.less
@@ -37,3 +37,11 @@
   float: right;
   margin: 16px 0 16px 24px;
 }
+
+.container {
+  padding: '0 50px';
+}
+
+.container {
+  padding: '0 50px';
+}
