--- a/src/app/containers/DashBoard/components/DashBoard/ElectricalCable/ElectricalCable.less
+++ b/src/app/containers/DashBoard/components/DashBoard/ElectricalCable/ElectricalCable.less
@@ -2,15 +2,43 @@
   .banner {
     display: flex;
     justify-content: center;
+    border: 1px solid #ddd;
+
     .ant-image {
       width: 50%;
+      display: flex;
+      justify-content: center;
+      flex-direction: column;
+      margin: 0 auto;
     }
   }
-  .electrical-cables {
+  .ant-spin-container {
+    width: 100%;
+    justify-content: center;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
 
-    .ant-spin-container {
+  .search {
+    width: 40%;
+    margin: 2rem auto;
+    display: flex;
+  }
+  .pageTitle {
+    font-size: 24px;
+    text-align: center;
+    padding: 2rem 0;
+    text-transform: uppercase;
+  }
+  &-mobile {
+    .pageTitle {
+      font-size: 18px;
+    }
+    .search {
       width: 100%;
-      justify-content: center;
+    }
+    .categories {
       display: flex;
       flex-direction: row;
       flex-wrap: wrap;
