--- a/src/app/containers/DashBoard/components/Information/components/Focusing/Focusing.less
+++ b/src/app/containers/DashBoard/components/Information/components/Focusing/Focusing.less
@@ -2,7 +2,7 @@
   .focusingItem {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: space-around;
     width: 80%;
     margin: 0 auto;
     .itemImage {
@@ -59,6 +59,7 @@
   &-mobile {
     .focusingItem {
       width: 100%;
+      justify-content: space-between;
 
       .itemImage {
         display: none;
