--- a/src/app/containers/Contact/Contact.less
+++ b/src/app/containers/Contact/Contact.less
@@ -2,12 +2,13 @@
   display: flex;
   flex-direction: row;
   justify-content: space-around;
-  
+  flex-wrap: wrap;
+
   .customerInfo {
     flex: 1 1 auto;
   }
   .title {
-    font-size: 18px;
+    font-size: 24px;
   }
 
   .companyInfo {
@@ -15,11 +16,23 @@
     border: none;
 
     .icon {
-      color: #E5704B;
+      color: #e5704b;
       font-weight: bold;
       padding-right: 10px;
     }
   }
 
-  
+  &-mobile {
+    .title {
+      font-size: 18px;
+    }
+
+    .companyInfo {
+      width: 100%;
+
+      .ant-card-body {
+        padding: 0;
+      }
+    }
+  }
 }
