--- a/src/app/containers/DashBoard/components/DashBoard/CategoryItem/CategoryItem.less
+++ b/src/app/containers/DashBoard/components/DashBoard/CategoryItem/CategoryItem.less
@@ -11,7 +11,6 @@
     
     .image {
       margin-bottom: 0;
-      // width: 300px;
       height: 300px;
       overflow: hidden;
       img {
@@ -19,7 +18,6 @@
         width: 300px;
         height: 300px;
         object-fit: cover;
-        // transition: filter 2s ease-out 100ms;
         transition: all .2s ease-in-out; 
       }
     }
@@ -57,5 +55,25 @@
 
   }
   
-  
+  &-mobile {
+    width: 50%;
+
+    .item-block {
+      .image {
+        height: unset;
+        img {
+          width: -webkit-fill-available;
+          object-fit: cover;
+        }
+      }
+
+      .content {
+        .information {
+          .title {
+            width: unset;
+          }
+        }
+      }
+    }
+  }
 }
