--- a/src/app/containers/Template/components/Template/components/Footer/components/BottomFooter/BottomFooter.less
+++ b/src/app/containers/Template/components/Template/components/Footer/components/BottomFooter/BottomFooter.less
@@ -27,4 +27,20 @@
         // width: 25%;
     }
   }
+
+  .displayNone {
+    display: none;
+  }
+
+  &-mobile {
+    justify-content: center;
+
+    .rightSide {
+      width: 100%;
+    }
+
+    .content {
+      font-size: 12px;
+    }
+  }
 }
