--- a/src/app/containers/Admin/SettingPage/components/Template/components/ColorPicker/ColorPicker.less
+++ b/src/app/containers/Admin/SettingPage/components/Template/components/ColorPicker/ColorPicker.less
@@ -19,9 +19,11 @@
   }
   .cover {
     position: fixed;
+    // position: absolute;
     top: 0px;
     right: 0px;
     bottom: 0px;
     left: 0px;
+    // background-color: red;
   }
 }
