--- a/src/app/containers/DashBoard/components/Information/components/Focusing/Focusing.less
+++ b/src/app/containers/DashBoard/components/Information/components/Focusing/Focusing.less
@@ -5,10 +5,11 @@
     justify-content: space-around;
     width: 70%;
     margin: 0 auto;
+    min-width: 1060px;
     .itemImage {
       width: 50%;
       display: flex;
-      justify-content: center;
+      justify-content: flex-start;
       &:last-child {
         margin-right: unset;
         display: flex;
