--- a/src/app/containers/DashBoard/components/ProductList/ProductList.less
+++ b/src/app/containers/DashBoard/components/ProductList/ProductList.less
@@ -11,7 +11,14 @@
   .productBlock {
     width: 100%;
     overflow-y: auto;
-
+    height: 460px;
+    position: relative;
+    .marquee-text {
+      // min-width: fit-content;
+      .marquee {
+        // min-width: fit-content;
+      }
+    }
     // .animationProductBlock {
     //   display: flex;
     //   flex-direction: row;
