--- a/src/app/containers/DashBoard/components/ProductList/components/ProductItem/ProductItem.less
+++ b/src/app/containers/DashBoard/components/ProductList/components/ProductItem/ProductItem.less
@@ -5,9 +5,9 @@
   width: 30%;
   padding: 10px;
   width: 300px;
-  flex: 1;
+  // flex: 1;
   border: 1px solid transparent;
-
+  height: 460px;
   &:hover {
     opacity: 80%;
 
