--- a/src/app/containers/Template/components/Template/components/Footer/components/BottomFooter/BottomFooter.less
+++ b/src/app/containers/Template/components/Template/components/Footer/components/BottomFooter/BottomFooter.less
@@ -1,6 +1,6 @@
 .bottomFooter {
   height: 50px;
-  background-color: #FF7043;
+  background-color: #ff7043;
   color: #fff;
   display: flex;
   flex-direction: row;
@@ -12,19 +12,19 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    text-align: left;
+    width: 70%;
   }
 
   .rightSide {
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-    width: 25%;
+    width: 30%;
 
     .content {
-    display: flex;
-    justify-content: space-around;
-
-        // width: 25%;
+      display: flex;
+      justify-content: space-between;
     }
   }
 
@@ -36,6 +36,7 @@
     justify-content: center;
 
     .rightSide {
+      justify-content: space-around;
       width: 100%;
     }
 
