--- a/src/app/containers/Template/components/Template/components/Footer/components/FooterTopMenu/components/FooterCerts/FooterCerts.less
+++ b/src/app/containers/Template/components/Template/components/Footer/components/FooterTopMenu/components/FooterCerts/FooterCerts.less
@@ -6,6 +6,13 @@
     display: flex;
     justify-content: center;
     flex-direction: column;
+
+    .ant-spin-container {
+      display: flex;
+      justify-content: center;
+      flex-direction: column;
+      gap: 5px;
+    }
   }
   .cert {
     display: flex;
