--- a/src/app/containers/DashBoard/components/Banner/Banner.less
+++ b/src/app/containers/DashBoard/components/Banner/Banner.less
@@ -15,7 +15,8 @@
     height: 100%;
     &-img {
       width: inherit;
-      object-fit: fill;
+      object-fit: cover;
+      height: 100%;
     }
   }
 }
