--- a/src/app/containers/Template/components/Template/Template.less
+++ b/src/app/containers/Template/components/Template/Template.less
@@ -6,6 +6,7 @@
   &-header {
     background-color: transparent !important;
     padding: 0 5rem;
+    // line-height: unset !important;
   }
   &-content {
     background-color: transparent;
@@ -56,7 +57,7 @@
   }
 
   &-padding-both {
-    padding: 0 15%;
+    padding: 0 12%;
   }
 
   &-padding-left {
